<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.nordicway.interchange</groupId>
    <artifactId>interchange-parent</artifactId>
    <version>1.0.22-SNAPSHOT</version>

    <packaging>pom</packaging>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github NordicWayInterchange Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/NordicWayInterchange/interchange</url>
        </repository>
    </distributionManagement>
    <scm>
        <developerConnection>scm:git:https://github.com/NordicwayInterchange/interchange.git</developerConnection>
        <tag>interchange-parent-..0</tag>
    </scm>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <scmCommentPrefix>[ci skip]</scmCommentPrefix>
                    </configuration>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>${license-maven-plugin.version}</version>
                    <configuration>
                        <inceptionYear>2019</inceptionYear>
                        <organizationName>Nordic Way 3</organizationName>
                        <licenseName>mit</licenseName>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- unit tests are named *Test.java, Run with 'mvn test' -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <useSystemClassLoader>false</useSystemClassLoader>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-dependencies.version}</version>
                </plugin>

                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven-deploy-plugin.version}</version>
                    <configuration>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <properties>
        <license.licenseName>mit</license.licenseName>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <spring-boot-dependencies.version>3.5.3</spring-boot-dependencies.version>
        <picocli-version>4.7.7</picocli-version>
        <qpid-jms-client.version>2.7.0</qpid-jms-client.version>
        <testcontainers.version>1.21.2</testcontainers.version>
        <dnsjava.version>3.6.3</dnsjava.version>
        <qpid-broker.version>9.2.1</qpid-broker.version>
        <bouncycastle.version>1.81</bouncycastle.version>
        <postgresql.version>42.7.7</postgresql.version>
        <junit-jupiter.version>5.12.2</junit-jupiter.version>
        <swagger-annotations-jakarta.version>2.2.34</swagger-annotations-jakarta.version>
        <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
        <license-maven-plugin.version>2.6.0</license-maven-plugin.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
        <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
        <javacc-maven-plugin.version>3.1.1</javacc-maven-plugin.version>
        <javacc.version>7.0.13</javacc.version>
        <springdoc-openapi-starter-webmvc-api.version>2.7.0</springdoc-openapi-starter-webmvc-api.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <asciidoctor-maven-plugin.version>3.2.0</asciidoctor-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <type>pom</type>
                <version>${spring-boot-dependencies.version}</version>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.qpid</groupId>
                <artifactId>qpid-jms-client</artifactId>
                <version>${qpid-jms-client.version}</version>
            </dependency>
            <dependency>
                <groupId>dnsjava</groupId>
                <artifactId>dnsjava</artifactId>
                <version>${dnsjava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.qpid</groupId>
                <artifactId>qpid-broker-core</artifactId>
                <version>${qpid-broker.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>

            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>postgresql</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli-version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>${swagger-annotations-jakarta.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>IT</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <!-- Integration tests are named *IT.java, Run with 'mvn verify' -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>${maven-failsafe-plugin.version}</version>
                        <configuration>
                            <includes>
                                <include>*IT</include>
                            </includes>
                            <skipAfterFailureCount>1</skipAfterFailureCount>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


    <modules>
        <module>admin-server</module>
        <module>ssl-utils</module>
        <module>testcontainers-base</module>
        <module>jms-client</module>
        <module>api-model</module>
        <module>interchange-spring-security</module>
        <module>interchange-spring-security-client</module>
        <module>interchange-spring-security-client-test</module>
        <module>neighbour-dns</module>
        <module>dns-client</module>
        <module>neighbour-model</module>
        <module>neighbour-rest-facade</module>
        <module>neighbour-service</module>
        <module>neighbour-server</module>
        <module>neighbour-discoverer</module>
        <module>routing-configurer</module>
        <module>message-collector</module>
        <module>quadtree-tool</module>
        <module>onboard-rest-api</module>
        <module>onboard-server</module>
        <module>onboard-server-app</module>
        <module>message-collector-app</module>
        <module>neighbour-discoverer-app</module>
        <module>neighbour-server-app</module>
        <module>routing-configurer-app</module>
        <module>qpid-client</module>
        <module>napcore-rest-api</module>
        <module>napcore-server</module>
        <module>napcore-server-app</module>
        <module>napcore-rest-client</module>
        <module>csr-signer</module>
        <module>keys-generator</module>
        <module>service-provider-client</module>
        <module>admin-server-app</module>
        <module>import-export-service</module>
        <module>csr-generator</module>
    </modules>
</project>
